# ferris-vault-server

./: Cargo.toml  README.md  config.yaml  todo.md
authentication/: Cargo.toml
authentication/src/: lib.rs  opaque_authentication.rs  session.rs  tests.rs
authentication/src/tests/: opaque_authentication_tests.rs
core-domain/: Cargo.toml
core-domain/src/: authentication.rs  domain.rs  file_storage.rs  lib.rs  ports.rs  tests.rs  utils.rs  vault_store.rs
core-domain/src/authentication/: authentication_error.rs
core-domain/src/domain/: server_domain.rs  server_domain_errors.rs
core-domain/src/file_storage/: file_storage_error.rs
core-domain/src/ports/: authentication.rs  file_storage.rs  vault_store.rs
core-domain/src/tests/: server_domain_tests.rs
core-domain/src/vault_store/: vault_store_error.rs
file-storage/: Cargo.toml
file-storage/src/: file_storage.rs  lib.rs  tests.rs
file-storage/src/tests/: file_storage_tests.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  requests.rs
vault-store/: Cargo.toml
vault-store/src/: directory_vault_store.rs  lib.rs  tests.rs
vault-store/src/tests/: directory_vault_store_tests.rs
